[package]
name = "docker_image"
version = "0.2.0"
authors = ["Yong Wen Chua <me@yongwen.xyz>"]

[[bin]]
name = "docker_image"
path = "src/main.rs"
test = true

[lib]
name = "docker_image"
path = "src/lib.rs"
test = true
doctest = true
doc = true

[dependencies]
clap = "2.24.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
